Changes for 2.1.1

New features:

Bug fixes:
....I..... [ZBX-6637] added -m64 compilation flag for solaris to be able to understand all attributes of a 64-bit processes (igors)
..F....... [ZBX-6800] added required javascripts for showing hintbox in Zabbix setup. (Guntis)
..F....... [ZBX-6796] added check in UI pre-requisites check, is memory_limit set to unlimited. (Guntis)
..F....... [ZBX-6776] added sorting by icon names in Map element configuration form (Guntis)
A......... [ZBX-6771] fixed "status" field and existing host validation in Proxy API (Ivo)
..F....... [ZBX-6732] cookie path is now automatically set from current URL (Ivo)
..F....... [ZBX-6706] improved node displaying in frontend (Eduard)

--------------------------------------------------------------------------------
Changes for 2.1.0

New features:
........S. [ZBXNEXT-322] implemented value cache (wiper)
...G...... [ZBXNEXT-1571] added support for proc.num for HP-UX (igors)
...G...PS. [ZBX-6299] added JSON validator (wiper)
A.FGI..PS. [ZBXNEXT-1726] added support for optional host metadata to active agent for auto-registration (dimir, Oleg)
..F....... [ZBXNEXT-1114] improved multiselect support in action condition configuration page (Eduard)
...G...... [ZBXNEXT-367] added printing Aliases and PerfCounters when agent is run with -p option (aleksej, dimir)
.......PS. [ZBX-6581] added printing host name to a web scenario error log message (dimir)
A.F....... [ZBXNEXT-1408] added multiselect in Action -> Conditions and Operations, in Scripts and in Item filter. Redesigned Host -> Templates form and added multiselect. Improved multiselect, added possibility to ignore elements (Oleg)
..F.I..... [ZBXNEXT-1124] implemented minimum trigger severity filter in maps (Eduard, wiper)
A.F.I...S. [ZBXNEXT-928] changed application inheritance logic to allow linking multiple templates with the same applications (Pavels, wiper)
A......... [ZBXNEXT-928] allowed to delete applications used in HTTP tests (Pavels, wiper)